--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <title>Document</title>
+  <title>¿?</title>
 </head>
 
 <style>
@@ -59,7 +59,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div> -->
         <div class="modal-body" style="height: 80vh;">
-          <h1 style="position: absolute; left: 50px; font-size: 5.5rem; color: #fffb00; text-shadow: 0 0 10px rgb(0, 191, 255); animation: myAnim 3s ease-in-out 0s 100 normal forwards;">SOY VARÓN</h1>
+          <h1 style="position: absolute; left: 50px; font-size: 5.5rem; color: #fffb00; text-shadow: 0 0 10px rgb(0, 191, 255); animation: myAnim 3s ease-in-out 0s 100 normal forwards;">SOY EL PRÓXIMO MESSI</h1>
           <img id="foto" src="./img/bolitasDelBebeSinLetras.png" alt="bolitas" width="100%" height="100%">
         </div>
         <div class="modal-footer">
