Update2 index.html

--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
         </div> -->
         <div class="modal-body" style="height: 80vh;">
           <h1 style="position: absolute; left: 50px; font-size: 5.5rem; color: #fffb00; text-shadow: 0 0 10px rgb(0, 191, 255); animation: myAnim 3s ease-in-out 0s 100 normal forwards;">SOY EL PRÓXIMO MESSI</h1>
-          <img id="foto" src="./img/bolitasDelBebeSinLetras.png" alt="bolitas" width="100%" height="100%">
+          <img id="foto" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEipRise5aPG2VALXKcJ3LIsju2tHdgnIFVAgsqqeTzwQPgQXpk6wBfdyAWNJar3vWAwlOG60AZy3e86wQbbn0lLfzwhxsWTGG9lD5gVxvvo0qQgAzMfWGQIi43Jtq0mLTVRtOTfgA9lyzb9G8kP7x2UJBycf0AKICPhL03THjb3dId82v4RLdqR2kMh/s320/losMejorespapas.png" alt="messi" width="100%" height="100%">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
-          <a class="btn btn-danger" href="https://youtu.be/v45G9d0kr00" target="_blank" role="button"><ion-icon name="play-sharp"></ion-icon>Video 1</a>
-          <a class="btn btn-danger" href="https://youtu.be/Gil5TPLxwKw" target="_blank" role="button"><ion-icon name="play-sharp"></ion-icon>Video 2</a>
+          <a class="btn btn-danger" href="https://youtu.be/S4tNZeogEuQ" target="_blank" role="button"><ion-icon name="play-sharp"></ion-icon>Video 1</a>
         </div>
       </div>
     </div>
